Resolves #1541: Restrict the Gabii EPUB

--- a/app/views/hyrax/base/_items.html.erb
+++ b/app/views/hyrax/base/_items.html.erb
@@ -8,6 +8,7 @@
         <th><%= t('.date_uploaded') %></th>
         <th><%= t('.visibility') %></th>
         <th><%= t('.actions') %></th>
+        <th><%= t('.component') %></th>
         <th><%= t('.set_representative') %></th>
       </tr>
     </thead>
