Resolves #1164: Replace unauthorized with options.

--- a/app/views/fulcrum/_home.html.erb
+++ b/app/views/fulcrum/_home.html.erb
@@ -19,6 +19,10 @@
     <td><%= repository.lessee_ids.count() %></td>
   </tr>
   <tr>
+    <td>Institutions</td>
+    <td><%= repository.institution_ids.count() %></td>
+  </tr>
+  <tr>
     <td>Publishers</td>
     <td><%= repository.publisher_ids.count() %></td>
   </tr>
