--- a/app/views/institutions/_form.html.erb
+++ b/app/views/institutions/_form.html.erb
@@ -1,12 +1,11 @@
-<%= simple_form_for(@product) do |f| %>
+<%= simple_form_for(@institution) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :identifier %>
-  </div>
-
-  <div class="form-inputs">
-    <%= f.input :purchase %>
+    <%= f.input :key %>
+    <%= f.input :name %>
+    <%= f.input :site %>
+    <%= f.input :login %>
   </div>
 
   <div class="form-actions">
