--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -95,13 +95,13 @@ webgl = FactoryService.webgl_unity(webgl_id)
 
           if (! $panel.length) {
 
-            var mobileUserMessage = '';
+            var $mobileUserMessage = "";
             if(heliotropeMobileUser === true) {
-              mobileUserMessage = '<div id="epub-webgl-mobile-message">Sorry, mobile devices are not compatible with WebGL.</div>';
+              $mobileUserMessage = '<div id="epub-webgl-mobile-message">Sorry, mobile devices are not compatible with WebGL.</div>';
             }
 
             var $panelContent =
-              '<div class="special-panel">' +
+              '<div class="special-panel" aria-hidden="false">' +
                 '<div class="panel-control">' +
                   '<button class="button--sm webgl-close" data-toggle="button" data-slot="label" aria-label="Close 3-D Model" onclick="close_panel();">' +
                     '<i class="icon-x oi" data-glyph="x" aria-hidden="true"></i>' +
@@ -109,7 +109,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
                 '</div>' +
                 '<div class="webgl-content">' +
                   '<div id="gameContainer" tabindex="0">' +
-                    mobileUserMessage +
+                    $mobileUserMessage +
                   '</div>' +
                 '</div>' +
                 '<div class="panel-info">' +
@@ -122,6 +122,8 @@ webgl = FactoryService.webgl_unity(webgl_id)
             $panel = $($panelContent).appendTo($main);
           } else {
             $panel.show();
+            $('.special-panel').prop('hidden', false);
+            $('.special-panel').attr('aria-hidden', 'false');
           }
 
           // mobile users won't be loading the 3D content so this stuff isn't required
@@ -158,6 +160,8 @@ webgl = FactoryService.webgl_unity(webgl_id)
             $('.special-panel').hide();
             $('body').removeClass('panel-open');
             $('body').removeClass('panel-right');
+            $('.special-panel').prop('hidden', true);
+            $('.special-panel').attr('aria-hidden', 'true');
             setTimeout(function() {
               window.dispatchEvent(new Event('resize'));
             }, 0);
@@ -183,8 +187,9 @@ webgl = FactoryService.webgl_unity(webgl_id)
 
         // dynamic WebGL canvas resizing
         reader.on('resized', function() {
-          // mobile users shouldn't have a canvas to resize
-          if (gameReady && heliotropeMobileUser === false) {
+          // again, these folks won't have a canvas to resize
+          //if (heliotropeMobileUser === false)
+          if (gameReady) {
             resize_webgl();
           }
         })
@@ -263,8 +268,6 @@ webgl = FactoryService.webgl_unity(webgl_id)
 
         }, true);
 
-
-
         // POI to CFI webgl -> epub mapping stuff
         var poiToCfiMap = {};
 
@@ -307,69 +310,22 @@ webgl = FactoryService.webgl_unity(webgl_id)
         })
         panel_toggle.addTo(reader);
 
-        // accessibility mode functions
+        // accessibility mode on/off
         var a11y_on = function() {
           $('body').addClass('a11y');
-          $('.toggle-a11y').addClass('on');
-          $('.toggle-a11y').attr('aria-disabled', 'false');
-          console.log('a11y-on');
+          $('#webgl').attr('aria-disabled', 'true');
+          $('#webgl').prop('disabled', true);
           close_panel();
-          //$('.webgl-content').detach();
-          // do something different with links to unity
-          // go to database in new window
         }
 
         var a11y_off = function() {
           $('body').removeClass('a11y');
           $('.toggle-a11y').removeClass('on');
-          $('.toggle-a11y').attr('aria-disabled', 'true');
-          console.log('a11y-off');
+          $('#webgl').attr('aria-disabled', 'false');
+          $('#webgl').prop('disabled', false);
           open_panel();
         }
 
-        // Accessibility mode in preferences
-        cozy.control.preferences({
-          region: 'top.toolbar.right',
-          fields: [
-            {
-              label: 'Accessibility Mode',
-              name: 'accessibility-mode',
-              inputs: [
-                { value: 'off', label: 'Off' },
-                { value: 'on', label: 'On'}
-              ],
-              value: 'off',
-              callback: function(value) {
-                if value == 'on' {
-                  a11y_on();
-                } else {
-                  a11y_off();
-                }
-                //alert("Accessibility Mode changed to " + value);
-              },
-              hint: 'Read the publication without the 3D model. Links to stratigraphic units point to database records.'
-            }
-          ]
-        }).addTo(reader);
-        //var a11y_toggle = cozy.control.widget.toggle({
-        //  region: 'top.header.right',
-        //  template: '<a target="_top" class="toggle-a11y" data-toggle="button" aria-disabled="true">Accessibility Mode</a>',
-        //  states: [{
-        //    stateName: 'a11y-on',
-        //    onClick: function(btn, reader) {
-        //      a11y_on();
-        //      btn.state('a11y-off');
-        //    }
-        //  },
-        //    {
-        //      stateName: 'a11y-off',
-        //      onClick: function(btn, reader) {
-        //        a11y_off();
-        //        btn.state('a11y-on');
-        //      }
-        //    }],
-        // })
-        // a11y_toggle.addTo(reader);
         <% else %>
         // no-op for epubs without a webgl (so... almost all of them)
         var fetch_poi = function() { }
@@ -415,6 +371,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
 
         // Bib info widget
         cozy.control.bibliographicInformation({ region: 'top.toolbar.left' }).addTo(reader)
+
         // Fullscreen widget
         cozy.control.widget.button({
           region: 'top.toolbar.right',
@@ -430,8 +387,37 @@ webgl = FactoryService.webgl_unity(webgl_id)
             }
           }
         }).addTo(reader);
-        // Reading preferences widget
+
+        // Reading preferences widget - webgl gets custom preferences
+        <% if @monograph_presenter.webgl? %>
+        // Add accessibility mode to preferences
+        cozy.control.preferences({
+          region: 'top.toolbar.right',
+          fields: [
+            {
+              label: 'Accessibility Mode',
+              name: 'accessibility-mode',
+              inputs: [
+                { value: 'off', label: 'Accessibility Mode Off' },
+                { value: 'on', label: 'Accessibility Mode On'}
+              ],
+              value: 'off',
+              callback: function(value) {
+                if (value == 'on') {
+                  a11y_on();
+                } else {
+                  a11y_off();
+                }
+                //alert("Accessibility Mode changed to " + value);
+              },
+              hint: 'When Accessibility Mode is "On", the publication is read without the 3D model. All links to stratigraphic units point to external database records.'
+            }
+          ]
+        }).addTo(reader);
+        <% else %>
         cozy.control.preferences({ region: 'top.toolbar.right' }).addTo(reader);
+        <% end %>
+
         // Paging widgets
         // cozy.control.pageFirst({ region: 'left.sidebar' }).addTo(reader);
         cozy.control.pagePrevious({ region: 'left.sidebar' }).addTo(reader);
