--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -3,11 +3,9 @@
 <% end
 webgl_id = @monograph_presenter.webgl_id
 webgl = FactoryService.webgl_unity(webgl_id)
-@unity_progress = javascript_path 'unity_progress_heliotrope'
 @unity_loader = "/webgl/#{webgl_id}/#{webgl.unity_loader}"
 @unity_json = "/webgl/#{webgl_id}/#{webgl.unity_json}"
 %>
-<script src="<%= @unity_progress %>"></script>
 <script src="<%= @unity_loader %>"></script>
 <script>
   // this has to go right after @unity_loader is loaded to guarantee no random JS errors get alert-boxed
@@ -40,7 +38,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
       else if (typeof gameInstance === 'undefined' ) {
 
 
-        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
+        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>");
 
         function FocusCanvas(focus) {
           if (gameReady) {
@@ -83,7 +81,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
       }
       else if (typeof gameInstance === 'undefined' ) {
 
-        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
+        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>");
 
         function FocusCanvas(focus) {
           if (gameReady) {
