--- a/app/views/webgls/show.html.erb
+++ b/app/views/webgls/show.html.erb
@@ -3,8 +3,8 @@
   <meta name="turbolinks-cache-control" content="no-cache">
   <%= csrf_meta_tag %>
   <link src="shortcut icon" href="<%= @favicon %>">
-  <%= javascript_include_tag 'unity_progress_heliotrope' %>'
-  <script src="<%= @unity_loader %>"></script>
+  <script src="<%= 'webgl/' + @unity_loader %>"></script>
+  <% Rails.logger.info("UNITY LOADER: " + @unity_loader) %>
   <script>
     // this has to go right after @unity_loader is loaded to guarantee no random JS errors get alert-boxed
     UnityLoader.Error.handler = function(e, t){
@@ -25,7 +25,7 @@
       }
       else if (typeof gameInstance === 'undefined' ) {
 
-        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
+        gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {serverSetupWarningEnabled: false});
 
         function FocusCanvas(focus) {
           if (gameReady) {
