create a basic login options page to be used for gabii

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -572,6 +572,17 @@ footer.press {
   }
 }
 
+
+///////////////////////////////////
+// ACCESS RESTRICTION PAGE
+///////////////////////////////////
+.restrict-title {
+  padding: 3em 0 3em;
+  margin: 4em !important;
+  background: #e8e8e8;
+  border: 1px solid #d6cece;
+}
+
 ///////////////////////////////////
 // EPUB READER - cozy-sun-bear
 ///////////////////////////////////
