--- a/app/views/webgls/show.html.erb
+++ b/app/views/webgls/show.html.erb
@@ -20,8 +20,8 @@
     }
     $(document).on('turbolinks:load', function() {
 
-      if (heliotropeMobileUser === true) {
-        $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, mobile devices are not compatible with WebGL.</div>');
+      if (heliotropeIncompatibleWebGlUser === true) {
+        $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, it looks like your device or browser is not compatible with WebGL.<br />Please check our <a href="http://hdl.handle.net/2027/fulcrum.9231782/about">compatibility requirements</a>.</div>');
       }
       else if (typeof gameInstance === 'undefined' ) {
 
