--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -34,9 +34,30 @@ webgl = FactoryService.webgl_unity(webgl_id)
         //$("body").addClass("reading");
         var reader = cozy.reader('reader', {
           href: "<%= "#{main_app.epub_url.gsub!(/\?.*/, '')}/" %>",
+          // #1270 TODO:  If has a downloadable EPUB, MOBI, or PDF
+          // add the download link information as an option to cozy.reader
+          // Question: how do we know if a PDF is representative of the book and
+          // not an asset? Can we add a "set representative" for PDF and MOBI?
+          download_links: [
+            {
+              format: 'EPUB',
+              size: '22 MB',
+              href: '#'
+            },
+            {
+              format: 'MOBI',
+              size: '12 MB',
+              href: '#'
+            },
+            {
+              format: 'PDF',
+              size: '15 MB',
+              href: '#'
+            }
+          ],
           metadata: {
             doi: '<%= @citable_link %>',
-            // TO-DO: iterate all creator given and family names for monograph
+            // TODO: iterate all creator given and family names for monograph
             // creator: [
             //    ''
             // ],
@@ -54,7 +75,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
           onClick: function() { window.location = "<%= "#{@back_link}" %>"; }
         }).addTo(reader);
         // Press brand widget
-        // TO-DO: only show logo for publishers that also have CSS overrides. Currently only HEB has this.
+        // TODO: only show logo for publishers that also have CSS overrides. Currently only HEB has this.
         <% if defined? @subdomain %>
         // only include logos for heb, nyupress, and gabii at this point
         <% if %w[heb nyupress gabii].include? @subdomain %>
@@ -399,6 +420,14 @@ webgl = FactoryService.webgl_unity(webgl_id)
         cozy.control.widget.button({
           region: 'top.toolbar.left',
           template: `<div class="btn-group"><button class="button--sm dropdown-toggle" data-toggle="dropdown" aria-label="Share book" aria-haspopup="true" aria-expanded="false"><i id="share" class="icon-share-boxed oi" data-glyph="share-boxed" title="Share book" aria-hidden="true"></i></button><ul class="dropdown-menu"><li><a href="http://twitter.com/intent/tweet?text=<%= @monograph_presenter.page_title %>&amp;url=<%= @citable_link %>" target="_blank">Twitter</a></li><li><a href="http://www.facebook.com/sharer.php?u=<%= @citable_link %>&amp;t=<%= @monograph_presenter.page_title %>" target="_blank">Facebook</a></li><li><a href="https://plus.google.com/share?url=<%= @citable_link %>" target="_blank">Google+</a></li><li><a href="http://www.reddit.com/submit?url=<%= @citable_link %>" target="_blank">Reddit</a></li><li><a href="http://www.mendeley.com/import/?url=<%= @citable_link %>" target="_blank">Mendeley</a></li><li><a href="http://www.citeulike.org/posturl?url=<%= @citable_link %>&amp;title=<%= @monograph_presenter.page_title %>" target="_blank">Cite U Like</a></li></ul></div>`
+        }).addTo(reader);
+
+        // Download widget
+        // #1270 TODO: if has downloadable EPUB, PDF, or MOBI
+        // add the download control
+        cozy.control.download({
+            region: 'top.toolbar.left',
+            template: '<button class="button--sm cozy-download" data-toggle="open" aria-label="Download book" role="button"><i id="download" class="oi" data-glyph="data-transfer-download" title="Download book" aria-hidden="true"></i></button>',
         }).addTo(reader);
 
         // Fullscreen widget
