use Hyrax CitationsBehavior

--- a/app/views/hyrax/monographs/show.html.erb
+++ b/app/views/hyrax/monographs/show.html.erb
@@ -23,6 +23,7 @@
 
 <div class="row">
   <div class="col-sm-12">
+    <%= render 'csb_hyrax_citations', presenter: @presenter %>
     <%= render 'items', presenter: @presenter %>
     <%# TODO: we may consider adding these partials in the future %>
     <%#= render 'workflow_actions_widget', presenter: @presenter %>
