remove backticks in epub show page for IE11 compatibility; modify share widget style to fix button height display in IE11

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -644,11 +644,12 @@ footer.press {
 }
 
 .cozy-control .btn-group {
-  display: initial;
+  display: flex;
+  height: 100%;
 
   .dropdown-menu {
     border-radius: 0px;
-    top: 125%;
+    top: 96%;
   }
 
 }
